--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c386c8">  <td>25/01/24 16:01:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dashboard.DashboardPage()[pri:2, instance:com.unionmutualproject.CreateQuote@5bf0d49]">DashboardPage</td> 
+<tr bgcolor="76e6b0">  <td>25/01/31 18:24:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateQuote.createQuote()[pri:0, instance:com.unionmutualproject.CreateQuote@6c6cb480]">createQuote</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>25/01/24 16:01:23</td>   <td>8829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dashboard.Transaction()[pri:3, instance:com.unionmutualproject.CreateQuote@5bf0d49]">Transaction</td> 
+<tr bgcolor="6f7171">  <td>25/01/31 18:25:01</td>   <td>10110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:1, instance:com.unionmutualproject.CreateQuote@6c6cb480]">login</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>25/01/24 16:00:55</td>   <td>-18926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateQuote.createQuote()[pri:0, instance:com.unionmutualproject.CreateQuote@5bf0d49]">createQuote</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>25/01/24 16:00:57</td>   <td>-16802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:1, instance:com.unionmutualproject.CreateQuote@5bf0d49]">login</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="616382">  <td>25/01/24 16:00:45</td>   <td>-29145</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.unionmutualproject.CreateQuote@5bf0d49]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="616382">  <td>25/01/31 18:24:40</td>   <td>-11535</td> <td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.unionmutualproject.CreateQuote@6c6cb480]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
